# usc_erl

./: .env  .env copy  .gitignore  CLAUDE.md  GEMINI.md  Makefile  README.md  Taskfile.yml  entry_point.py  missing_runs_check.py  pyproject.toml  setup.sh  slurm_run_array.sh  slurm_run_wimle.sh  sync.bash  tune_sc_erl.py  wb.py
configs/: config.yaml  download.yaml  tune.yaml
configs/algorithm/: crossq.yaml  ddpg.yaml  erl.yaml  ppo.yaml  sc_erl.yaml  td3.yaml
configs/algorithm/erl/: erl_Ant-v5.yaml  erl_HalfCheetah-v5.yaml  erl_Hopper-v5.yaml  erl_Walker2d-v5.yaml
configs/algorithm/sc_erl/: sc_erl_Ant-v5.yaml  sc_erl_FetchPush-v4.yaml  sc_erl_HalfCheetah-v5.yaml  sc_erl_Hopper-v5.yaml  sc_erl_Swimmer-v5.yaml  sc_erl_Walker2d-v5.yaml
optim/: slurm_tune.sh  tune_sc_erl.py
plots_and_tests/: download_results.py  generate_pdf.py  generate_report.py  generate_results.py  process_results.py  statistical_tests.py
results/: full_report.md  process_results.py
src/DDPG/: __init__.py  ddpg.py
src/ERL/: erl.py
src/PPO/: ppo.py
src/SC_ERL/: sc_erl.py
src/TD3/: td3.py
src/algorithms/CrossQ/: crossq.py
src/algorithms/DDPG/: ddpg.py
src/algorithms/ERL/: __init__.py  erl.py
src/algorithms/PPO/: ppo.py
src/algorithms/SAC/: sac.py
src/algorithms/SC_ERL/: __init__.py  sc_erl.py
src/algorithms/TD3/: td3.py
src/common/: evolution_module.py  fetch_wrappers.py  mc_dropout.py  modules.py  reply_buffer.py  sb3_callback.py  surrogate_controller.py  utils.py  wandb_logger.py
src/modules/: deep_modules.py  ensemble_module.py  evolution_module.py  mc_dropout.py  mc_dropout_module.py
src/optimization/: optuna_tune.py  run_optuna_grid.py
wimle/: main.py  pyproject.toml  train_parallel.py
wimle/jaxrl/: utils.py
