[project]
name = "ue_sc_erl"
version = "1.0.0"
description = "A framework for evolutionary reinforcement learning algorithms."
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fpdf2>=2.8.7",
    "gymnasium[mujoco]>=1.3.0",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.9",
    "metaworld>=3.0.0",
    "opencv-python>=4.13.0.92",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tabulate>=0.10.0",
    "torch>=2.11.0",
    "torchrl>=0.12.0",
    "tqdm>=4.67.3",
    "wandb>=0.26.1",
]

[tool.uv]
package = true

