[project]
name = "ue_sc_erl"
version = "1.0.0"
description = "A framework for evolutionary reinforcement learning algorithms."
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "dm-control>=1.0.43",
    "fancy-gym>=0.3.0",
    "dotenv>=0.9.9",
    "fpdf2>=2.8.7",
    "gymnasium[mujoco]>=1.3.0",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.9",
    "opencv-python>=4.13.0.92",
    "optuna>=4.9.0",
    "sbx-rl>=0.27.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shimmy>=2.0.1",
    "stable-baselines3>=2.9.0",
    "tabulate>=0.10.0",
    "torch>=2.11.0",
    "torchrl>=0.12.0",
    "tqdm>=4.67.3",
    "wandb>=0.26.1",
]

[project.optional-dependencies]
# GPU JAX for CrossQ on the cluster (CUDA 12.x).
# Install with: uv sync --extra cuda
# Must be run after `uv sync` since it overrides the CPU jaxlib pulled in by sbx-rl.
cuda = [
    "jax[cuda12]>=0.4.26",
]

[tool.uv]
package = true

