[project]
name = "wimle"
version = "0.1.0"
description = "Uncertainty-Aware World Models with IMLE"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "absl-py",
    "numpy>=1.26.4",
    "scipy>=1.12.0",
    "tqdm",
    "mujoco>=3.0.0",
    "dm-control>=1.0.14",
    "nvidia-cudnn-cu12==8.9.7.29; sys_platform == 'linux'",
    "nvidia-cuda-nvcc-cu12; sys_platform == 'linux'",
    "flax==0.7.5",
    "optax==0.2.2",
    "wandb",
    "ml-collections",
    "imageio",
]
